--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 # General log file
 *.log
+*.log*
 
 # hassio folders.
 .cloud/
@@ -31,3 +32,4 @@ zwscene.xml
 options.xml
 
 *.august.conf
+*.backup
