--- a/light/swtich.yaml
+++ b/light/swtich.yaml
@@ -1,6 +1,6 @@
-# - platform: switch
-#   name: Kitchen Tract Lights
-#   entity_id: switch.jasco_products_unknown_type_4952_id_3137_switch
+- platform: switch
+  name: Kitchen Tract Lights
+  entity_id: switch.ge_enbrighten_z_wave_plus_smart_switch
 
 # - platform: switch
 #   name: Office Light
@@ -10,22 +10,15 @@
 #   name: Butterfly Light
 #   entity_id: switch.0720034284f3eb85221f_2
 
-# - platform: switch
-#   name: Entryway Light
-#   entity_id: switch.jasco_products_unknown_type_4952_id_3137_switch_5
 
-# - platform: switch
-#   name: Bathroom Light
-#   entity_id: switch.jasco_products_unknown_type_4952_id_3137_switch_6
-
-# - platform: switch
-#   name: Butler's Pantry Light
-#   entity_id: switch.jasco_products_unknown_type_4952_id_3137_switch_3
+- platform: switch
+  name: Butler's Pantry Light
+  entity_id: switch.ge_enbrighten_z_wave_plus_smart_switch_5
   
-# - platform: switch
-#   name: "Cabinet Lights - Kitchen"
-#   entity_id: switch.jasco_products_unknown_type_4952_id_3137_switch_2
+- platform: switch
+  name: "Cabinet Lights - Kitchen"
+  entity_id: switch.ge_enbrighten_z_wave_plus_smart_switch_4
   
-# - platform: switch
-#   name: "Cabinet Lights - Butler's Pantry"
-#   entity_id: switch.jasco_products_unknown_type_4952_id_3137_switch_5
+- platform: switch
+  name: "Cabinet Lights - Butler's Pantry"
+  entity_id: switch.ge_enbrighten_z_wave_plus_smart_switch_2
