--- a/node-red/.config.nodes.json
+++ b/node-red/.config.nodes.json
@@ -1,7 +1,7 @@
 {
     "node-red": {
         "name": "node-red",
-        "version": "2.1.4",
+        "version": "2.2.2",
         "local": false,
         "user": false,
         "nodes": {
@@ -405,51 +405,9 @@
             }
         }
     },
-    "node-red-contrib-actionflows": {
-        "name": "node-red-contrib-actionflows",
-        "version": "2.0.4",
-        "local": false,
-        "user": false,
-        "nodes": {
-            "actionfilters": {
-                "name": "actionfilters",
-                "types": [
-                    "actionflows",
-                    "actionflows_in",
-                    "actionflows_out"
-                ],
-                "enabled": true,
-                "local": false,
-                "user": false,
-                "module": "node-red-contrib-actionflows",
-                "file": "/opt/node_modules/node-red-contrib-actionflows/actionflows/actionflows.js"
-            }
-        }
-    },
-    "node-red-contrib-alexa-home-skill": {
-        "name": "node-red-contrib-alexa-home-skill",
-        "version": "0.1.19",
-        "local": false,
-        "user": false,
-        "nodes": {
-            "alexa": {
-                "name": "alexa",
-                "types": [
-                    "alexa-home-conf",
-                    "alexa-home",
-                    "alexa-home-resp"
-                ],
-                "enabled": true,
-                "local": false,
-                "user": false,
-                "module": "node-red-contrib-alexa-home-skill",
-                "file": "/opt/node_modules/node-red-contrib-alexa-home-skill/alexa.js"
-            }
-        }
-    },
     "node-red-contrib-bigtimer": {
         "name": "node-red-contrib-bigtimer",
-        "version": "2.7.6",
+        "version": "2.8.1",
         "local": false,
         "user": false,
         "nodes": {
@@ -506,19 +464,22 @@
     },
     "node-red-contrib-home-assistant-websocket": {
         "name": "node-red-contrib-home-assistant-websocket",
-        "version": "0.40.0",
+        "version": "0.43.1",
         "local": false,
         "user": false,
         "nodes": {
             "all": {
                 "name": "all",
                 "types": [
+                    "ha_entity_filter",
                     "ha-api",
+                    "ha-button",
                     "api-call-service",
                     "server",
                     "api-current-state",
                     "ha-device",
                     "ha-entity",
+                    "ha-entity-config",
                     "server-events",
                     "server-state-changed",
                     "ha-fire-event",
@@ -538,25 +499,6 @@
                 "user": false,
                 "module": "node-red-contrib-home-assistant-websocket",
                 "file": "/opt/node_modules/node-red-contrib-home-assistant-websocket/dist/index.js"
-            }
-        }
-    },
-    "node-red-contrib-http-request": {
-        "name": "node-red-contrib-http-request",
-        "version": "0.1.14",
-        "local": false,
-        "user": false,
-        "nodes": {
-            "www-request": {
-                "name": "www-request",
-                "types": [
-                    "www-request"
-                ],
-                "enabled": true,
-                "local": false,
-                "user": false,
-                "module": "node-red-contrib-http-request",
-                "file": "/opt/node_modules/node-red-contrib-http-request/www-request.js"
             }
         }
     },
@@ -584,7 +526,7 @@
     },
     "node-red-contrib-interval-length": {
         "name": "node-red-contrib-interval-length",
-        "version": "0.0.4",
+        "version": "0.0.6",
         "local": false,
         "user": false,
         "nodes": {
@@ -601,28 +543,9 @@
             }
         }
     },
-    "node-red-contrib-looptimer": {
-        "name": "node-red-contrib-looptimer",
-        "version": "0.0.8",
-        "local": false,
-        "user": false,
-        "nodes": {
-            "looptimer": {
-                "name": "looptimer",
-                "types": [
-                    "looptimer"
-                ],
-                "enabled": true,
-                "local": false,
-                "user": false,
-                "module": "node-red-contrib-looptimer",
-                "file": "/opt/node_modules/node-red-contrib-looptimer/looptimer.js"
-            }
-        }
-    },
     "node-red-contrib-modbus": {
         "name": "node-red-contrib-modbus",
-        "version": "5.16.0",
+        "version": "5.21.2",
         "local": false,
         "user": false,
         "nodes": {
@@ -812,44 +735,6 @@
             }
         }
     },
-    "node-red-contrib-statistics": {
-        "name": "node-red-contrib-statistics",
-        "version": "2.2.2",
-        "local": false,
-        "user": false,
-        "nodes": {
-            "statistics": {
-                "name": "statistics",
-                "types": [
-                    "statistics"
-                ],
-                "enabled": true,
-                "local": false,
-                "user": false,
-                "module": "node-red-contrib-statistics",
-                "file": "/opt/node_modules/node-red-contrib-statistics/statistics.js"
-            }
-        }
-    },
-    "node-red-contrib-stoptimer": {
-        "name": "node-red-contrib-stoptimer",
-        "version": "0.0.7",
-        "local": false,
-        "user": false,
-        "nodes": {
-            "stoptimer": {
-                "name": "stoptimer",
-                "types": [
-                    "stoptimer"
-                ],
-                "enabled": true,
-                "local": false,
-                "user": false,
-                "module": "node-red-contrib-stoptimer",
-                "file": "/opt/node_modules/node-red-contrib-stoptimer/stoptimer.js"
-            }
-        }
-    },
     "node-red-contrib-sunevents": {
         "name": "node-red-contrib-sunevents",
         "version": "3.0.3",
@@ -871,7 +756,7 @@
     },
     "node-red-contrib-time-range-switch": {
         "name": "node-red-contrib-time-range-switch",
-        "version": "1.1.2",
+        "version": "1.1.3",
         "local": false,
         "user": false,
         "nodes": {
@@ -888,47 +773,9 @@
             }
         }
     },
-    "node-red-contrib-timecheck": {
-        "name": "node-red-contrib-timecheck",
-        "version": "1.1.0",
-        "local": false,
-        "user": false,
-        "nodes": {
-            "sample": {
-                "name": "sample",
-                "types": [
-                    "timecheck"
-                ],
-                "enabled": true,
-                "local": false,
-                "user": false,
-                "module": "node-red-contrib-timecheck",
-                "file": "/opt/node_modules/node-red-contrib-timecheck/timecheck/timecheck.js"
-            }
-        }
-    },
-    "node-red-contrib-traffic": {
-        "name": "node-red-contrib-traffic",
-        "version": "0.2.1",
-        "local": false,
-        "user": false,
-        "nodes": {
-            "traffic": {
-                "name": "traffic",
-                "types": [
-                    "traffic"
-                ],
-                "enabled": true,
-                "local": false,
-                "user": false,
-                "module": "node-red-contrib-traffic",
-                "file": "/opt/node_modules/node-red-contrib-traffic/traffic/traffic.js"
-            }
-        }
-    },
     "node-red-dashboard": {
         "name": "node-red-dashboard",
-        "version": "3.1.2",
+        "version": "3.1.7",
         "local": false,
         "user": false,
         "nodes": {
@@ -1186,7 +1033,7 @@
     },
     "node-red-node-email": {
         "name": "node-red-node-email",
-        "version": "1.13.0",
+        "version": "1.15.1",
         "local": false,
         "user": false,
         "nodes": {
@@ -1207,7 +1054,7 @@
     },
     "node-red-node-feedparser": {
         "name": "node-red-node-feedparser",
-        "version": "0.2.1",
+        "version": "0.3.0",
         "local": false,
         "user": false,
         "nodes": {
@@ -1221,66 +1068,6 @@
                 "user": false,
                 "module": "node-red-node-feedparser",
                 "file": "/opt/node_modules/node-red-node-feedparser/32-feedparse.js"
-            }
-        }
-    },
-    "node-red-node-geofence": {
-        "name": "node-red-node-geofence",
-        "version": "0.3.1",
-        "local": false,
-        "user": false,
-        "nodes": {
-            "geofence": {
-                "name": "geofence",
-                "types": [
-                    "geofence"
-                ],
-                "enabled": true,
-                "local": false,
-                "user": false,
-                "module": "node-red-node-geofence",
-                "file": "/opt/node_modules/node-red-node-geofence/geofence.js"
-            }
-        }
-    },
-    "node-red-node-msgpack": {
-        "name": "node-red-node-msgpack",
-        "version": "1.2.1",
-        "local": false,
-        "user": false,
-        "nodes": {
-            "msgpack": {
-                "name": "msgpack",
-                "types": [
-                    "msgpack"
-                ],
-                "enabled": true,
-                "local": false,
-                "user": false,
-                "module": "node-red-node-msgpack",
-                "file": "/opt/node_modules/node-red-node-msgpack/70-msgpack.js"
-            }
-        }
-    },
-    "node-red-node-pi-gpio": {
-        "name": "node-red-node-pi-gpio",
-        "version": "2.0.1",
-        "local": false,
-        "user": false,
-        "nodes": {
-            "rpi-gpio": {
-                "name": "rpi-gpio",
-                "types": [
-                    "rpi-gpio in",
-                    "rpi-gpio out",
-                    "rpi-mouse",
-                    "rpi-keyboard"
-                ],
-                "enabled": true,
-                "local": false,
-                "user": false,
-                "module": "node-red-node-pi-gpio",
-                "file": "/opt/node_modules/node-red-node-pi-gpio/36-rpi-gpio.js"
             }
         }
     },
@@ -1322,28 +1109,9 @@
             }
         }
     },
-    "node-red-node-sentiment": {
-        "name": "node-red-node-sentiment",
-        "version": "0.1.6",
-        "local": false,
-        "user": false,
-        "nodes": {
-            "sentiment": {
-                "name": "sentiment",
-                "types": [
-                    "sentiment"
-                ],
-                "enabled": true,
-                "local": false,
-                "user": false,
-                "module": "node-red-node-sentiment",
-                "file": "/opt/node_modules/node-red-node-sentiment/72-sentiment.js"
-            }
-        }
-    },
     "node-red-node-serialport": {
         "name": "node-red-node-serialport",
-        "version": "0.15.0",
+        "version": "1.0.1",
         "local": false,
         "user": false,
         "nodes": {
@@ -1520,7 +1288,7 @@
     },
     "node-red-contrib-persistent-fsm": {
         "name": "node-red-contrib-persistent-fsm",
-        "version": "1.1.0",
+        "version": "1.2.0",
         "local": false,
         "user": false,
         "nodes": {
