--- a/node-red/.config.nodes.json
+++ b/node-red/.config.nodes.json
@@ -1,10 +1,21 @@
 {
     "node-red": {
         "name": "node-red",
-        "version": "2.2.2",
+        "version": "3.0.2",
         "local": false,
         "user": false,
         "nodes": {
+            "junction": {
+                "name": "junction",
+                "types": [
+                    "junction"
+                ],
+                "enabled": true,
+                "local": false,
+                "user": false,
+                "module": "node-red",
+                "file": "/opt/node_modules/@node-red/nodes/core/common/05-junction.js"
+            },
             "inject": {
                 "name": "inject",
                 "types": [
@@ -407,7 +418,7 @@
     },
     "node-red-contrib-bigtimer": {
         "name": "node-red-contrib-bigtimer",
-        "version": "2.8.1",
+        "version": "2.8.2",
         "local": false,
         "user": false,
         "nodes": {
@@ -464,7 +475,7 @@
     },
     "node-red-contrib-home-assistant-websocket": {
         "name": "node-red-contrib-home-assistant-websocket",
-        "version": "0.43.1",
+        "version": "0.44.0",
         "local": false,
         "user": false,
         "nodes": {
@@ -545,7 +556,7 @@
     },
     "node-red-contrib-modbus": {
         "name": "node-red-contrib-modbus",
-        "version": "5.21.2",
+        "version": "5.23.1",
         "local": false,
         "user": false,
         "nodes": {
@@ -1033,7 +1044,7 @@
     },
     "node-red-node-email": {
         "name": "node-red-node-email",
-        "version": "1.15.1",
+        "version": "1.17.0",
         "local": false,
         "user": false,
         "nodes": {
@@ -1302,6 +1313,110 @@
                 "user": false,
                 "module": "node-red-contrib-persistent-fsm",
                 "file": "/opt/node_modules/node-red-contrib-persistent-fsm/state-machine.js"
+            }
+        }
+    },
+    "node-red-contrib-chronos": {
+        "name": "node-red-contrib-chronos",
+        "version": "1.18.0",
+        "local": true,
+        "user": true,
+        "nodes": {
+            "chronos-config": {
+                "name": "chronos-config",
+                "types": [
+                    "chronos-config"
+                ],
+                "enabled": true,
+                "local": true,
+                "user": false,
+                "module": "node-red-contrib-chronos",
+                "file": "/config/node-red/node_modules/node-red-contrib-chronos/nodes/config.js"
+            },
+            "chronos-scheduler": {
+                "name": "chronos-scheduler",
+                "types": [
+                    "chronos-scheduler"
+                ],
+                "enabled": true,
+                "local": true,
+                "user": false,
+                "module": "node-red-contrib-chronos",
+                "file": "/config/node-red/node_modules/node-red-contrib-chronos/nodes/scheduler.js"
+            },
+            "chronos-repeat": {
+                "name": "chronos-repeat",
+                "types": [
+                    "chronos-repeat"
+                ],
+                "enabled": true,
+                "local": true,
+                "user": false,
+                "module": "node-red-contrib-chronos",
+                "file": "/config/node-red/node_modules/node-red-contrib-chronos/nodes/repeat.js"
+            },
+            "chronos-delay": {
+                "name": "chronos-delay",
+                "types": [
+                    "chronos-delay"
+                ],
+                "enabled": true,
+                "local": true,
+                "user": false,
+                "module": "node-red-contrib-chronos",
+                "file": "/config/node-red/node_modules/node-red-contrib-chronos/nodes/delay.js"
+            },
+            "chronos-switch": {
+                "name": "chronos-switch",
+                "types": [
+                    "chronos-switch"
+                ],
+                "enabled": true,
+                "local": true,
+                "user": false,
+                "module": "node-red-contrib-chronos",
+                "file": "/config/node-red/node_modules/node-red-contrib-chronos/nodes/switch.js"
+            },
+            "chronos-filter": {
+                "name": "chronos-filter",
+                "types": [
+                    "chronos-filter"
+                ],
+                "enabled": true,
+                "local": true,
+                "user": false,
+                "module": "node-red-contrib-chronos",
+                "file": "/config/node-red/node_modules/node-red-contrib-chronos/nodes/filter.js"
+            },
+            "chronos-change": {
+                "name": "chronos-change",
+                "types": [
+                    "chronos-change"
+                ],
+                "enabled": true,
+                "local": true,
+                "user": false,
+                "module": "node-red-contrib-chronos",
+                "file": "/config/node-red/node_modules/node-red-contrib-chronos/nodes/change.js"
+            }
+        }
+    },
+    "node-red-contrib-countdown-2": {
+        "name": "node-red-contrib-countdown-2",
+        "version": "1.4.2",
+        "local": true,
+        "user": true,
+        "nodes": {
+            "countdown": {
+                "name": "countdown",
+                "types": [
+                    "countdown"
+                ],
+                "enabled": true,
+                "local": true,
+                "user": false,
+                "module": "node-red-contrib-countdown-2",
+                "file": "/config/node-red/node_modules/node-red-contrib-countdown-2/countdown.js"
             }
         }
     }
