--- a/node-red/package.json
+++ b/node-red/package.json
@@ -4,6 +4,8 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "node-red-contrib-alexa-remote2": "~3.10.0"
+        "node-red-contrib-alexa-remote2": "~3.10.0",
+        "node-red-contrib-chronos": "~1.18.0",
+        "node-red-contrib-countdown-2": "~1.4.2"
     }
 }
