--- a/light/swtich.yaml
+++ b/light/swtich.yaml
@@ -43,6 +43,10 @@
   name: Entry Way Light
   entity_id: switch.ge_enbrighten_z_wave_plus_smart_switch_6
 
+- platform: switch
+  name: Dinging Room Christmas Lights
+  entity_id: switch.dining_room_christmas_lights_switch
+
 # Master Bedroom
 
 - platform: switch
