--- a/node-red/.config.users.json
+++ b/node-red/.config.users.json
@@ -26,7 +26,7 @@
                 "welcome": "3.0.2"
             }
         },
-        "menu-menu-item-sidebar": false,
+        "menu-menu-item-sidebar": true,
         "menu-menu-item-palette": true,
         "debug": {
             "clearType": "all",
