--- a/template_sensors.yaml
+++ b/template_sensors.yaml
@@ -1,20 +1,21 @@
 - sensor:
-    - name: "Plant Schedule Duration"
-      unit_of_measurement: "hours"
-      state: >
-          {% set start = strptime(states('input_datetime.plant_schedule_start'), '%H:%M:%S').time() %}
-          {% set end = strptime(states('input_datetime.plant_schedule_end'), '%H:%M:%S').time() %}
-          
-          {% set start_dt = datetime.combine(date.today(), start) %}
-          {% set end_dt = datetime.combine(date.today(), end) %}
-          
-          {% if end < start %}
-            {% set end_dt = datetime.combine(date.today() + timedelta(days=1), end) %}
+      - name: "Plant Schedule Duration"
+        unit_of_measurement: "hours"
+        state: >
+          {% set start = states('input_datetime.plant_schedule_start') %}
+          {% set end = states('input_datetime.plant_schedule_end') %}
+
+          {% set start_time = strptime(start, '%H:%M:%S') %}
+          {% set end_time = strptime(end, '%H:%M:%S') %}
+
+          {% if end_time < start_time %}
+            {% set end_time = end_time + timedelta(days=1) %}
           {% endif %}
 
-          {% set duration = (end_dt - start_dt).total_seconds() / 3600 %}
+          {% set duration = (end_time - start_time).total_seconds() / 3600 %}
           
           {{ duration | round(2) }}
+
       - name: "Wakeup Time"
         state: >
             {% set weekday = now().weekday() %} {% if weekday < 5 %}
@@ -22,6 +23,7 @@
             {% else %}
               {{ states('input_datetime.weekend_wakeup') }}
             {% endif %}
+            
         attributes:
             friendly_name: "Dynamic Wakeup Time"
             icon: mdi:alarm
