major overhaul to node red scripts

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -2,9 +2,22 @@
     "name": "scripts",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
-    "dependencies": {},
-    "devDependencies": {},
+    "type": "module",
+    "scripts": {
+        "build": "tsx build.ts -i src -o dist -r"
+    },
+    "dependencies": {
+        "@rollup/plugin-commonjs": "^25.0.8",
+        "@rollup/plugin-node-resolve": "^15.2.3",
+        "@types/yargs": "^17.0.32",
+        "chalk": "^5.3.0",
+        "typescript": "^5.4.5",
+        "vite": "^5.2.12",
+        "vite-plugin-commonjs": "^0.10.1",
+        "yargs": "^17.7.2",
+        "@types/node": "^20.14.1"
+    },
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "devDependencies": {}
 }
