--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,18 +1,16 @@
 # Configure a default setup of Home Assistant (frontend, api, etc)
 default_config:
 
-# Text to speech
-tts:
-    - platform: google_translate
-
 group: !include_dir_merge_list group
 
-automation: !include_dir_merge_list automation
+automation: !include automations.yaml
+
 scene: !include scenes.yaml
 light: !include_dir_merge_list light
 
 input_boolean: !include input_boolean.yaml
 input_datetime: !include input_datetime.yaml
+input_select: !include input_select.yaml
 
 zone: !include zone.yaml
 
