--- a/configuration.yaml
+++ b/configuration.yaml
@@ -12,9 +12,13 @@ input_boolean: !include input_boolean.yaml
 input_datetime: !include input_datetime.yaml
 input_select: !include input_select.yaml
 
+binary_sensor: !include binary_sensors.yaml
+
 zone: !include zone.yaml
 
 template: !include template_sensors.yaml
 
 frontend:
     themes: !include_dir_merge_named themes
+
+homeassistant: !include customize.yaml
