--- a/configuration.yaml
+++ b/configuration.yaml
@@ -8,7 +8,9 @@ automation: !include automations.yaml
 script: !include scripts.yaml
 
 scene: !include scenes.yaml
+
 light: !include_dir_merge_list light
+fan: !include_dir_merge_list fan
 
 input_boolean: !include input_boolean.yaml
 input_datetime: !include input_datetime.yaml
