--- a/scenes.yaml
+++ b/scenes.yaml
@@ -139,8 +139,8 @@
       - 114
       - 95
       xy_color:
-      - 0.578029
-      - 0.324986
+      - 0.578038
+      - 0.324975
       entity_id:
       - light.philips_hue_tv_1_huelight
       - light.philips_hue_tv_2_huelight_2
@@ -332,7 +332,7 @@
       state: 'off'
     lock.back_door:
       changed_by: Mike Babb
-      battery_level: 43
+      battery_level: 42
       friendly_name: Back Door
       supported_features: 0
       state: locked
@@ -477,12 +477,28 @@
       supported_features: 15
       state: closed
     light.office_monitor_light:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
       supported_color_modes:
-      - brightness
-      color_mode: brightness
-      brightness: 3
+      - color_temp
       friendly_name: Office Monitor Light
       supported_features: 0
+      color_mode: color_temp
+      brightness: 3
+      color_temp_kelvin: 2000
+      color_temp: 500
+      hs_color:
+      - 30.601
+      - 94.547
+      rgb_color:
+      - 255
+      - 136
+      - 13
+      xy_color:
+      - 0.599
+      - 0.382
       state: 'on'
   icon: mdi:weather-night
   metadata:
