--- a/binary_sensors.yaml
+++ b/binary_sensors.yaml
@@ -4,25 +4,43 @@
   probability_threshold: 0.9
   observations:
       - entity_id: device_tracker.fff
-        prob_given_true: 0.95
-        prob_given_false: 0.05
+        prob_given_true: 0.99
+        prob_given_false: 0.01
         platform: state
         to_state: "home"
-
-      - entity_id: sensor.fff_ssid
-        prob_given_true: 0.85
-        prob_given_false: 0.1
+        
+- platform: bayesian
+  name: "Mike Asleep Status"
+  prior: 0.5
+  probability_threshold: 0.95
+  observations:
+      - entity_id: input_select.home_status
+        prob_given_true: 0.7
+        prob_given_false: 0.3
         platform: state
-        to_state: "Babber"
-
-      - entity_id: device_tracker.fff2
+        to_state: "home"
+      - entity_id: input_select.day_status
+        prob_given_true: 0.65
+        prob_given_false: 0.35
+        platform: state
+        to_state: "night"
+      - entity_id: sensor.fff_activity
+        prob_given_true: 0.05
+        prob_given_false: 0.95
+        platform: state
+        to_state: "Walking"
+      - entity_id: sensor.fff_battery_state
         prob_given_true: 0.75
         prob_given_false: 0.25
         platform: state
-        to_state: "home"
-
-      - entity_id: device_tracker.son_of_toast
+        to_state: "Charging"
+      - entity_id: binary_sensor.master_bedroom_fp2_presence_sensor_1
         prob_given_true: 0.8
         prob_given_false: 0.2
         platform: state
-        to_state: "home"
+        to_state: "on"
+      - entity_id: sensor.lights_off_percentage
+        prob_given_true: 0.9
+        prob_given_false: 0.1
+        platform: numeric_state
+        above: 95
