node red action update

--- a/node-red-scripts/package.json
+++ b/node-red-scripts/package.json
@@ -8,16 +8,17 @@
         "watch": "tsx build.ts -i src -o dist -r -w"
     },
     "dependencies": {
-        "@rollup/plugin-commonjs": "^25.0.8",
-        "@rollup/plugin-node-resolve": "^15.2.3",
-        "@types/node": "^20.14.1",
-        "@types/yargs": "^17.0.32",
+        "@rollup/plugin-commonjs": "^28.0.2",
+        "@rollup/plugin-node-resolve": "^16.0.0",
+        "@types/node": "^22.10.2",
+        "@types/yargs": "^17.0.33",
         "chalk": "^5.3.0",
-        "chokidar": "^3.6.0",
-        "tsx": "^4.11.2",
-        "typescript": "^5.4.5",
-        "vite": "^5.2.12",
-        "vite-plugin-commonjs": "^0.10.1",
+        "chokidar": "^4.0.1",
+        "prettier": "^3.4.2",
+        "tsx": "^4.19.2",
+        "typescript": "^5.7.2",
+        "vite": "^6.0.3",
+        "vite-plugin-commonjs": "^0.10.4",
         "yargs": "^17.7.2"
     },
     "author": "Mike Babb <mike@babb.dev>",
