--- a/automations.yaml
+++ b/automations.yaml
@@ -57,43 +57,32 @@
           entity_id: input_boolean.nighttime
   mode: single
 
-- id: "hey_lamp_off"
-  alias: "Hey Lamp Off"
-  description: "Flashes the Hey Lamp when toggled off to ensure it's in the right warm color state when turned back on"
+- id: "hey_lamp_on"
+  alias: "Hey Lamp On"
+  description: "Flashes the Hey Lamp when toggled on to ensure it's in the right warm color state"
   trigger:
   - platform: state
     entity_id: light.hey_lamp
-    to: "off"
+    to: "on"
   condition: []
   mode: single
   max_exceeded: silent
   action:
   - sequence:
     # First flash
-    - service: light.turn_off
-      target:
-        entity_id: light.hey_lamp
-    - delay:
-        milliseconds: 500
     - service: light.turn_on
       target:
         entity_id: light.hey_lamp
     - delay:
         milliseconds: 500
-
+    - service: light.turn_off
+      target:
+        entity_id: light.hey_lamp
+    - delay:
+        milliseconds: 500
     # Second flash  
-    - service: light.turn_off
-      target:
-        entity_id: light.hey_lamp
-    - delay:
-        milliseconds: 500
     - service: light.turn_on
       target:
         entity_id: light.hey_lamp
     - delay:
         milliseconds: 500
-
-    # Final turn off
-    - service: light.turn_off
-      target:
-        entity_id: light.hey_lamp
